--- a/index.html
+++ b/index.html
@@ -6,6 +6,57 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 </body>
-
+    <header>
+        <div class="logo-container">
+            <a href="#"><img src="" alt=""></a>
+        </div> 
+        <ul class="nav-container">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    <header>
+    <section class="section-1">
+        <div class="content-container-1">
+            <div class="left-text-container">
+                <h1>This website is awesome!</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button>Sign up</button>
+            </div>
+        </div> 
+    </section>
+    <section class="section-2">
+        <div class="content-container-2">
+            <h2>Some random Information</h2>
+            <div class="">
+                <img src="#" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="">
+                <img src="#" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="">
+                <img src="#" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="">
+                <img src="#" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </section>
+    <section class="section-4">
+        <h3>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h3>
+        <p>Thor, God of Thunder</p>
+    </section>
+    <section class="section-4">
+        <div class="content-container-3">
+            <div class="left-text-container-2">
+                <h4>Call to action! It's time!</h4>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
