--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
 </body>
     <header>
         <div class="logo-container">
-            <a href="#"><img src="" alt=""></a>
+            <h3 class="logo"><a href="#">Header Logo</a></h3>
         </div> 
         <ul class="nav-container">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Header Link One</a></li>
+            <li><a href="#">Header Link Two</a></li>
+            <li><a href="#">Header Link Three</a></li>
         </ul>
-    <header>
+    </header>
     <section class="section-1">
         <div class="content-container-1">
             <div class="left-text-container">
                 <h1>This website is awesome!</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button>Sign up</button>
+                <div class="button-container">
+                    <button>Sign up</button>
+                </div>
             </div>
+            <img class="marble" src="./img/marble.jpg" alt="Blue marble pattern">
         </div> 
     </section>
     <section class="section-2">
