--- a/index.html
+++ b/index.html
@@ -30,28 +30,32 @@
     </section>
     <section class="section-2">
         <div class="content-container-2">
-            <h2>Some random Information</h2>
-            <div class="">
-                <img src="#" alt="">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="">
-                <img src="#" alt="">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="">
-                <img src="#" alt="">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="">
-                <img src="#" alt="">
-                <p>this is some subtext under an illustration or image</p>
+            <h2>Some Random Information</h2>
+            <div class="info-container">
+                <div class="info">
+                    <img class="info-img" src="./img/marble.jpg" alt="">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info">
+                    <img class="info-img" src="./img/marble.jpg" alt="">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info">
+                    <img class="info-img" src="./img/marble.jpg" alt="">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info">
+                    <img class="info-img" src="./img/marble.jpg" alt="">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
             </div>
         </div>
     </section>
-    <section class="section-4">
-        <h3>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h3>
-        <p>Thor, God of Thunder</p>
+    <section class="section-3">
+        <div class="quote-container">
+            <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
+            <figcaption>—Abraham Lincoln</figcaption>
+        </div>
     </section>
     <section class="section-4">
         <div class="content-container-3">
